Hice cambios en los textos del slider principal

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                 <img src="/imagenes-logos/carrousel1.jpg" width="80%" class="d-block w-100" alt="...">
 
                 <div class="carousel-caption d-none d-md-block">
-                    <h1 style="text-shadow: 1px 1px 2px black; color: aliceblue;">SOMOS RPM</h1>
-                    <p style="color: aliceblue; text-shadow: 1px 1px 2px black; font-size: large;">¡La mejor aplicacion para Moto-Viajeros en Colombia!</p>
+                    <h1 style="text-shadow: 1px 1px 2px black; color: aliceblue;">RUTAS PARA MOTEROS</h1>
+                    <p style="color: aliceblue; text-shadow: 1px 1px 2px black; font-size: large;">¡La aplicación que te ayuda a viajar en moto!</p>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <img src="/imagenes-logos/carrousel2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1 style="text-shadow: 1px 1px 2px black; color: aliceblue;">MILES DE MOTOVIAJEROS POR TODA COLOMBIA</h1>
+                    <h1 style="text-shadow: 1px 1px 2px black; color: aliceblue;">MILES DE MOTOVIAJEROS RECORRIENDO LAS MEJORES RUTAS DEL PAÍS</h1>
                     <p style="color: aliceblue; text-shadow: 1px 1px 2px black; font-size: large;">¿A que esperas para unirte a RPM?</p>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                 <img src="/imagenes-logos/carrousel3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 style="color: aliceblue; text-shadow: 1px 1px 2px black;">CONOCE COLOMBIA</h1>
-                    <p style="color: aliceblue; font-size: large; text-shadow: 1px 1px 2px black;">A través de nuestras rutas pensadas para que viajes de la mejor manera</p>
+                    <p style="color: aliceblue; font-size: large; text-shadow: 1px 1px 2px black;">Encuentra las mejores rutas hechas por motoviajeros que ya recorren este hermoso país</p>
                 </div>
 
             </div>
