Un cambio en el texto de la segunda imagen del slider principal

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img src="/imagenes-logos/carrousel2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 style="text-shadow: 1px 1px 2px black; color: aliceblue;">MILES DE MOTOVIAJEROS RECORRIENDO LAS MEJORES RUTAS DEL PAÍS</h1>
-                    <p style="color: aliceblue; text-shadow: 1px 1px 2px black; font-size: large;">¿A que esperas para unirte a RPM?</p>
+                    <p style="color: aliceblue; text-shadow: 1px 1px 2px black; font-size: large;">¿Que esperas para unirte a RPM?</p>
                 </div>
             </div>
             <div class="carousel-item">
