--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="" />
     <title>RPM - Rutas Para Moteros</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="/imagenes-logos/rpm-logo.png" />
+    <link rel="icon" type="image/x-icon" href="/logos/Negativo2.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
