por alguna razon, nadie nunca cambio el template que entregué el trimestre pasado cuando pasó a ser el que usamos para el frontend, asi que le cambié el hola.txt y le quite mi nombre del html xd

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<!--RPM - Cristian Narvaez ADSO 2556678 SENA-->
+<!--RPM - ADSO 2556678 SENA-->
 
 <head>
     <meta charset="utf-8" />
