--- a/proyectos5toTrimestre/proyectoCarrito/index.html
+++ b/proyectos5toTrimestre/proyectoCarrito/index.html
@@ -5,8 +5,8 @@
     <!-- <base href="https://narvaezsky.github.io/proyectoCarrito/index.html"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Libre Colombia - Envíos Gratis en el día</title>
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="shortcut icon" href="/image/logo-favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/proyectos5toTrimestre/proyectoCarrito/style/style.css">
+    <link rel="shortcut icon" href="/proyectos5toTrimestre/proyectoCarrito/image/logo-favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     
 </head>
@@ -15,9 +15,9 @@
         <div class="header">
             <div class="contenido-header">
 
-                <a href="index.html"><img src="/image/mercado-libre-logo.png" width="150px" class="logo-app" alt="Logo Mercado Libre" ></a>
+                <a href="index.html"><img src="/proyectos5toTrimestre/proyectoCarrito/image/mercado-libre-logo.png" width="150px" class="logo-app" alt="Logo Mercado Libre" ></a>
                 <input type="search" class="buscador" placeholder="Buscar productos, marcas y más..." >
-                <img src="/image/promoNivel6Header.webp" width="380px" style="position: absolute; right: 0px" alt="">
+                <img src="/proyectos5toTrimestre/proyectoCarrito/image/promoNivel6Header.webp" width="380px" style="position: absolute; right: 0px" alt="">
 
                 <div class="footer-nav">
                     <a class="opcion-nav">Ingresa tu ubicacion</a>
@@ -33,7 +33,7 @@
                     <a class="opcion-nav">Crea tu cuenta</a>
                     <a class="opcion-nav">Ingresa</a>
                     <a class="opcion-nav">Mis compras</a>
-                    <img src="/image/logo-carrito.png" class="logo-carrito"  alt="carrito" id="btcarrito">
+                    <img src="/proyectos5toTrimestre/proyectoCarrito/image/logo-carrito.png" class="logo-carrito"  alt="carrito" id="btcarrito">
                 </div>
             </div> 
             
@@ -193,7 +193,7 @@
 <!-- 
     <script src="/js/main.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="/proyectos5toTrimestre/proyectoCarrito/app.js"></script>
 </body>
 </html>
 
