--- a/carritodefinitivo/index.html
+++ b/carritodefinitivo/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/img/download-removebg-preview.png" type="image/x-icon">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="shortcut icon" href="/carritodefinitivo/assets/img/download-removebg-preview.png" type="image/x-icon">
+    <link rel="stylesheet" href="/carritodefinitivo/assets/css/style.css">
     <title>SenaExpress</title>
 </head>
 
 <body>
     <header class="cabeza">
-        <img src="/assets/img/R-removebg-preview.png" width="90px" alt="carro">
+        <img src="/carritodefinitivo/assets/img/R-removebg-preview.png" width="90px" alt="carro">
         <h1 class="titulo">SenaExpress</h1>
-        <img src="/assets/img/carrito-de-compras.png" width="90px" id="carritoo">
+        <img src="/carritodefinitivo/assets/img/carrito-de-compras.png" width="90px" id="carritoo">
     </header>
 
     <div class="contenedor-padre">
@@ -22,7 +22,7 @@
 
     <div class="modal-estilos" id="overlay"></div>
     <div class="nosehola" id="modal"></div>
-    <script src="/assets/js/app1.js"></script>
+    <script src="/carritodefinitivo/assets/js/app1.js"></script>
 </body>
 
 </html>
