--- a/comentaImagenesJs/index.html
+++ b/comentaImagenesJs/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="/css/estilos.css">
+<link rel="stylesheet" href="/comentaImagenesJs/css/estilos.css">
 <html>
 
 <head>
@@ -16,7 +16,7 @@
     </form>
     <ul id="lista-tweets"></ul>
 
-    <script src="/js/app.js"></script>
+    <script src="/comentaImagenesJs/js/app.js"></script>
 </body>
 
 </html>
