--- a/Trabajos_tecer_trimestre/comentaImagenesJs/index.html
+++ b/Trabajos_tecer_trimestre/comentaImagenesJs/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="/css/estilos.css">
+<link rel="stylesheet" href="/comentaImagenesJs/css/estilos.css">
 <html>
 
 <head>
@@ -10,13 +10,13 @@
     <h1>Tus Publicaciones</h1>
     <form id="formulario">
         <input type="file" id="imagenInput" />
-        <input type="text" id="tweet" placeholder="Escribe el titulo de la imagen" />
+        <input type="text" id="tweet" placeholder="Escribe el titulo de la imagen" required />
         <button type="submit">Subir</button>
         <div id="contenido"></div>
     </form>
     <ul id="lista-tweets"></ul>
 
-    <script src="/js/app.js"></script>
+    <script src="/comentaImagenesJs/js/app.js"></script>
 </body>
 
 </html>
